@@ -8,6 +8,9 @@ update-manager (1:0.132) UNRELEASED; urgency=low
   * debian/update-manager-core.links:
     - use "91-release-upgrade" instead of "91-release_upgrade" to
       make run-parts happy
+  * UpdateManager/Core/MyCache.py:
+    - detect dirty dpkg journal and enter recovery mode in this
+      case (thanks to Maco for reporting)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Dec 2009 10:01:31 +0100
 
